list one recipe added
